# DjangoCRM

./: .gitignore  .pre-commit-config.yaml  mydb.py  package-lock.json  package.json  pyproject.toml  rav.yaml  requirements.prod.txt  tailwind.config.js
crm/: settings.py
src/: manage.py  requirements.txt
src/contacts/: models.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_last_updated_by_alter_contact_user.py
src/crm/: settings.py  urls.py
src/crm/crm/: settings.py
src/dashboard/: urls.py  views.py
src/events/: apps.py  handlers.py  models.py  signals.py
src/events/migrations/: 0001_initial.py  0002_alter_event_event_type.py  0002_remove_event_name.py  0003_alter_event_event_type.py  0003_event_user.py
src/static/tailwind/: input.css
src/templates/: about.html  base.html  dashboard.html
src/templates/contacts/: contacts_list.html  detail.html  list.html
src/templates/contacts/snippets/: contact-card.html
src/templates/dashboard/: base.html  main.html  nav.html  sidebar.html
website/: admin.py  forms.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py
website/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html  update_record.html
