[project]
name = "djangocrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "django>=5.2,<6",
  "pre-commit>=4.3",
]

[dependency-groups]
dev = [
  "pip>=25.3",
]
